# kdc

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac
docker/: Makefile.am
docker/kdc/: .gitignore  Dockerfile  Makefile.am  heimdal-kdc  inetd.conf  kdc.conf.in  krb5.conf.in  services
scripts/: Makefile.am
scripts/ci/: Makefile.am  before_install  build
scripts/docker/: Makefile.am  entrypoint
